[package]
name = "gha"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Standard exit codes
exitcode = "1.1"

# Error handling (optional but recommended)
anyhow = "1"
thiserror = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6.0.0"
dotenvy = "0.15.7"
serde_yaml = "0.9.34+deprecated"

[dev-dependencies]
# CLI testing
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
