[package]
name = "gha"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Standard exit codes
exitcode = "1.1.2"

# Error handling (optional but recommended)
anyhow = "1.0.100"
thiserror = "1"

tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
dotenvy = "0.15.7"
yaml-rust2 = "0.9.0"

handlebars = "6.3.2"

[dev-dependencies]
# CLI testing
assert_cmd = "2.1.1"
assert_fs = "1"
predicates = "3.1.3"
